--- a/flaskstarter/templates/layouts/header.html
+++ b/flaskstarter/templates/layouts/header.html
@@ -33,10 +33,10 @@
 <div class="collapse navbar-collapse" id="navbarResponsive">
   <ul class="navbar-nav ml-auto">
     <li class="nav-item">
-      <a class="nav-link" href="{{ url_for('tasks.home') }}">Home</a>
+      <a class="nav-link" href="{{ url_for('tasks.table_view') }}">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{{ url_for('tasks.my_tasks') }}">Explore Data</a>
+      <a class="nav-link" href="{{ url_for('tasks.table_view') }}">Explore Data</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="{{ url_for('frontend.contact_us') }}">Contact Us</a>
