--- a/flaskstarter/templates/tasks/table_view.html
+++ b/flaskstarter/templates/tasks/table_view.html
@@ -11,9 +11,9 @@
    <div class="row justify-content-center">
         <h2>Explore Data: 2.0 Data View</h2>
    </div>
-   <div  class="jumbotron" style="padding:20px;background:#fff;">
+   <div class="jumbotron" style="background:#fff;">
         <h3>Filter</h3>
-        <table style="width:70%">
+        <table style="width:85%">
             <tbody>
                 <tr><td><div class="input-group mb-3"><input class="form-control" type="text" id="txt_id" placeholder="Search id"/></div></td></tr>
                 <tr>
@@ -65,26 +65,30 @@
                             {% endfor %}
                         </select>
                     </td>
+                    <td>
+                    <input type="button" class="btn btn-primary" style="display:inline-block" value="Search" id="btnSearch" />
+                    </td>
+                    <td>
+                    <input type="button" class="btn btn-primary" style="display:inline-block" value="Clear" id="btnClear" />
+                     </td>
+                     <td>
+                    <button class="btn btn-primary" style="display:inline-block" id="btnAdvance">Advanced Search</button>
+                    </td>
                 </tr>
+
             </tbody>
 
         </table>
-
     </div>
-    <input type="button" class="btn btn-primary" style="display:inline-block" value="Search" id="btnSearch" />
-    <input type="button" class="btn btn-primary" style="display:inline-block" value="Clear" id="btnClear" />
-    <button class="btn btn-primary" style="display:inline-block" id="btnAdvance">Advanced Search</button>
 
-    <br>
     <div class="jumbotron" id="globalsearch" style="background:#fff">
     <h4>
        Global Search
     </h4>
-    <input class="form-control" id="customSearchBox"/>
-    <div>
+    <input style="width:50%;display:inline-block" class="form-control" id="customSearchBox"/>
     <input type="button" style="display:inline-block" class="btn btn-primary" value="Search all" id="btnGSearch" />
     <input type="button" style="display:inline-block" class="btn btn-primary" value="Clear all" id="btnGClear" />
-    </div>
+
    </div>
     <br>
     <table id="empTable" class="table table-hover table-striped table-responsive" style="width:100%">
@@ -155,7 +159,7 @@ $(document).ready(function() {
             enableCaseInsensitiveFiltering: true,
             filterPlaceholder: 'Search for something...',
             nonSelectedText: 'Sample id',
-            buttonWidth: '200px'
+            buttonWidth: '150px'
     });
 
       $('#opt_age').multiselect({
@@ -164,7 +168,7 @@ $(document).ready(function() {
             enableCaseInsensitiveFiltering: true,
             filterPlaceholder: 'Search for something...',
             nonSelectedText: 'Age',
-            buttonWidth: '200px'
+            buttonWidth: '150px'
     });
 
       $('#opt_donor').multiselect({
@@ -173,7 +177,7 @@ $(document).ready(function() {
             enableCaseInsensitiveFiltering: true,
             filterPlaceholder: 'Search for something...',
             nonSelectedText: 'Donor',
-            buttonWidth: '200px'
+            buttonWidth: '150px'
     });
 
       $('#opt_dataset').multiselect({
@@ -182,7 +186,7 @@ $(document).ready(function() {
             enableCaseInsensitiveFiltering: true,
             filterPlaceholder: 'Search for something...',
             nonSelectedText: 'Dataset',
-            buttonWidth: '200px'
+            buttonWidth: '150px'
     });
 
       $('#opt_status').multiselect({
@@ -191,7 +195,7 @@ $(document).ready(function() {
             enableCaseInsensitiveFiltering: true,
             filterPlaceholder: 'Search for something...',
             nonSelectedText: 'Status',
-            buttonWidth: '200px'
+            buttonWidth: '150px'
     });
 
       $('#opt_prediction').multiselect({
@@ -200,7 +204,7 @@ $(document).ready(function() {
             enableCaseInsensitiveFiltering: true,
             filterPlaceholder: 'Search for something...',
             nonSelectedText: 'Cell Type',
-            buttonWidth: '200px'
+            buttonWidth: '150px'
     });
 
     $('#empTable').DataTable({
