Edit the default use case, allow download or umap before clicking the dowload meta and umap

--- a/flaskstarter/templates/tasks/table_view.html
+++ b/flaskstarter/templates/tasks/table_view.html
@@ -122,7 +122,7 @@
     </form>
 
     <form action="{{ url_for('tasks.show_plot')}}" method="get" style="display:inline-block">
-      <button class="btn btn-primary" name="show_plot" type="submit"> Show tSNE plot </button>
+      <button class="btn btn-primary" name="show_plot" type="submit"> Show UMAP plot </button>
     </form>
 
     <form action="{{ url_for('tasks.download_matrix')}}" method="post" style="display:inline-block">
