Remove download umap and ids temporary

--- a/flaskstarter/templates/tasks/table_view.html
+++ b/flaskstarter/templates/tasks/table_view.html
@@ -106,11 +106,11 @@
     </table>
     <div class="jumbotron">
        <h4>Please choose any of the option below for data manipulation.</h4>
-    <!-- <form action="{{ url_for('tasks.download_meta')}}" method="post" style="display:inline-block">
+    <form action="{{ url_for('tasks.download_meta')}}" method="post" style="display:inline-block">
       <button class="btn btn-primary" name="download" type="submit"> Download metadata </button>
     </form>
 
-    <form action="{{ url_for('tasks.download_umap')}}" method="post" style="display:inline-block">
+    <!-- <form action="{{ url_for('tasks.download_umap')}}" method="post" style="display:inline-block">
       <button class="btn btn-primary" name="download_umap" type="submit"> Download UMAP </button>
     </form> -->
 
