--- a/flaskstarter/templates/tasks/show_plot.html
+++ b/flaskstarter/templates/tasks/show_plot.html
@@ -41,6 +41,8 @@
     </form>  
   </td>
    <div id="chart" class="chart"></div>
+   <div id="chart2" class="chart"></div>
+
 </div>
 
 {% endblock %}
@@ -50,7 +52,17 @@
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 <script type="text/javascript">
   var graphs = {{ graphJSON | safe }};
+
   Plotly.plot('chart', graphs, {});
+
+</script>
+
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+<script type="text/javascript">
+  var graph2 = {{ graphJSON2 | safe }};
+
+  Plotly.plot('chart2', graph2, {});
+
 </script>
 
 <!-- Show loading box -->
