--- a/flaskstarter/templates/tasks/table_view.html
+++ b/flaskstarter/templates/tasks/table_view.html
@@ -159,7 +159,8 @@ $(document).ready(function() {
             enableCaseInsensitiveFiltering: true,
             filterPlaceholder: 'Search for something...',
             nonSelectedText: 'Sample id',
-            buttonWidth: '150px'
+            buttonWidth: '150px',
+            maxHeight: 450
     });
 
       $('#opt_age').multiselect({
@@ -168,7 +169,8 @@ $(document).ready(function() {
             enableCaseInsensitiveFiltering: true,
             filterPlaceholder: 'Search for something...',
             nonSelectedText: 'Age',
-            buttonWidth: '150px'
+            buttonWidth: '150px',
+            maxHeight: 450
     });
 
       $('#opt_donor').multiselect({
@@ -177,7 +179,8 @@ $(document).ready(function() {
             enableCaseInsensitiveFiltering: true,
             filterPlaceholder: 'Search for something...',
             nonSelectedText: 'Donor',
-            buttonWidth: '150px'
+            buttonWidth: '150px',
+            maxHeight: 450
     });
 
       $('#opt_dataset').multiselect({
@@ -186,7 +189,8 @@ $(document).ready(function() {
             enableCaseInsensitiveFiltering: true,
             filterPlaceholder: 'Search for something...',
             nonSelectedText: 'Dataset',
-            buttonWidth: '150px'
+            buttonWidth: '150px',
+            maxHeight: 450
     });
 
       $('#opt_status').multiselect({
@@ -195,7 +199,8 @@ $(document).ready(function() {
             enableCaseInsensitiveFiltering: true,
             filterPlaceholder: 'Search for something...',
             nonSelectedText: 'Status',
-            buttonWidth: '150px'
+            buttonWidth: '150px',
+            maxHeight: 450
     });
 
       $('#opt_prediction').multiselect({
@@ -204,7 +209,8 @@ $(document).ready(function() {
             enableCaseInsensitiveFiltering: true,
             filterPlaceholder: 'Search for something...',
             nonSelectedText: 'Cell Type',
-            buttonWidth: '150px'
+            buttonWidth: '150px',
+            maxHeight: 450
     });
 
     $('#empTable').DataTable({
