--- a/flaskstarter/templates/tasks/table_view.html
+++ b/flaskstarter/templates/tasks/table_view.html
@@ -109,9 +109,9 @@
       <button class="btn btn-primary" name="download" type="submit"> Download metadata </button>
     </form>
 
-    <!-- <form action="{{ url_for('tasks.download_umap')}}" method="post" style="display:inline-block">
-      <button class="btn btn-primary" name="download_umap" type="submit"> Download UMAP </button>
-    </form> -->
+    <form action="{{ url_for('tasks.show_scfeature')}}" method="get" style="display:inline-block">
+        <button class="btn btn-primary" name="show_scfeature" type="submit"> Show scFeature plot </button>
+      </form>
 
     <form action="{{ url_for('tasks.show_plot')}}" method="get" style="display:inline-block">
       <button class="btn btn-primary" name="show_plot" type="submit"> Show UMAP plot </button>
