add third table view

--- a/flaskstarter/templates/layouts/banner.html
+++ b/flaskstarter/templates/layouts/banner.html
@@ -29,8 +29,8 @@
     <div id="dashboard" class="d-flex justify-content-between container-fluid">
         <div class="dash-item">
             <div class="item1"><img src="{{url_for('static', filename='Group.png')}}" width="64" height="64"/></div>
-            <div class="item2"><h2 id="animatedCellCount">25000000</h2></div>
-            <div class="item3">Cells</div>
+            <div class="item2"><h2 id="animatedCellCount">9</h2></div>
+            <div class="item3">Million Cells</div>
         </div>
         <div class="dash-item">
             <div class="item1"><img src="{{url_for('static', filename='Group 38.png')}}" width="76" height="53"/></div>
@@ -67,7 +67,7 @@
         }
 
         const obj = document.getElementById("animatedCellCount");
-        animateValue(obj, 0, 2500000, 5000);
+        animateValue(obj, 0, 9, 5000);
 
         const obj2 = document.getElementById("animatedDonorCount");
         animateValue(obj2, 0, 542, 5000);
