--- a/flaskstarter/templates/layouts/header.html
+++ b/flaskstarter/templates/layouts/header.html
@@ -10,7 +10,7 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="{{ url_for('tasks.table_view') }}">scRNA-seq</a>
             <a class="dropdown-item" href="{{ url_for('naso.naso_tableview') }}">Naso</a>
-            <a class="dropdown-item" href="#">Balf</a>
+            <a class="dropdown-item" href="{{ url_for('balf.balf_tableview') }}">Balf</a>
           </div>
     </li>
     <li class="nav-item">
