--- a/flaskstarter/templates/tasks/show_scfeature.html
+++ b/flaskstarter/templates/tasks/show_scfeature.html
@@ -64,9 +64,9 @@
 
 
 <div class="jumbotron">
-<form action="{{ url_for('tasks.table_view')}}" method="post" style="display:inline-block">
- <button class="btn btn-primary" name="jump home" type="submit"> Back </button>
-</form>
+  <form action="{{ url_for('tasks.table_view')}}" method="get" style="display:inline-block">
+    <button class="btn btn-primary" name="jump_home" type="submit"> Home page</button>
+  </form>
 </div>
 
 {% endblock %}
