Edit the number in the layou

--- a/flaskstarter/templates/layouts/banner.html
+++ b/flaskstarter/templates/layouts/banner.html
@@ -34,7 +34,7 @@
         </div>
         <div class="dash-item">
             <div class="item1"><img src="{{url_for('static', filename='Group 38.png')}}" width="76" height="53"/></div>
-            <div class="item2"><h2 id="animatedDonorCount">542</h2></div>
+            <div class="item2"><h2 id="animatedDonorCount">974</h2></div>
             <div class="item3">Donors</div>
         </div>
         <div class="dash-item">
@@ -44,7 +44,7 @@
         </div>
         <div class="dash-item">
             <div class="item1"><img src="{{url_for('static', filename='Group 37.png')}}" width="64" height="64"/></div>
-            <div class="item2"><h2>23 Jan, 2022</h2></div>
+            <div class="item2"><h2>May, 2022</h2></div>
             <div class="item3">Data Date Processed</div>
         </div>
     </div>
@@ -70,10 +70,10 @@
         animateValue(obj, 0, 5000000, 5000);
 
         const obj2 = document.getElementById("animatedDonorCount");
-        animateValue(obj2, 0, 542, 5000);
+        animateValue(obj2, 0, 974, 5000);
 
         const obj3 = document.getElementById("animatedDatasetCount");
-        animateValue(obj3, 0, 19, 5000);
+        animateValue(obj3, 0,21, 5000);
 
      var typed = new Typed('.typed', {
        typeSpeed: 50,
