--- a/flaskstarter/templates/tasks/show_plot.html
+++ b/flaskstarter/templates/tasks/show_plot.html
@@ -46,8 +46,12 @@
 </div>
 
 <div class="jumbotron">
+  <h4>Please choose any of the option below for data manipulation.</h4>
   <form action="{{ url_for('tasks.table_view')}}" method="get" style="display:inline-block">
     <button class="btn btn-primary" name="jump_home" type="submit"> Home page</button>
+  </form>
+  <form action="{{ url_for('tasks.download_matrix')}}" method="post" style="display:inline-block">
+    <button class="btn btn-primary" name="download_matrix" type="submit"> Download matrix </button>
   </form>
 </div>
 
