--- a/flaskstarter/templates/tasks/show_scfeature.html
+++ b/flaskstarter/templates/tasks/show_scfeature.html
@@ -79,6 +79,17 @@
 
 {% block scripts %}
 
+<script>
+  document.addEventListener("DOMContentLoaded", function(event) {
+              var scrollpos = localStorage.getItem('scrollpos');
+              if (scrollpos) window.scrollTo(0, scrollpos);
+          });
+  
+          window.onbeforeunload = function(e) {
+              localStorage.setItem('scrollpos', window.scrollY);
+          };
+</script>
+
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 <script type="text/javascript">
   var graphs = {{ graphJSON | safe }};
