--- a/flaskstarter/templates/tasks/show_plot.html
+++ b/flaskstarter/templates/tasks/show_plot.html
@@ -11,22 +11,23 @@
   <div class="row justify-content-center">
     <h2>UMAP Plot</h2>
   </div>
-
-  <td>Color Option</td>
+  <div  class="filter">
+  <td> Options </td>
   <td>
     <form action="{{ url_for('tasks.show_plot')}}" method="post" style="display:inline-block">
       <select id="opt_col" name="name_opt_col">
-          <option label=" "></option>
+          <option label="Color Option"></option>
           {% for val in colors %}
           <option value="{{val}}">{{val}}</option>
           {% endfor %}
       </select>
-      <button id="idbtnSelectcolor" name="btnSelectcolor" type="submit"> Select </button>
+      <button id="idbtnSelectcolor" name="btnSelectcolor" type="submit"> Apply </button>
     </form>  
   </td>
+  </div>
    <div id="chart" class="chart"></div>
 </div>
-
+{% include 'layouts/citation.html' %}
 {% endblock %}
 
 {% block scripts %}
