--- a/flaskstarter/templates/layouts/header.html
+++ b/flaskstarter/templates/layouts/header.html
@@ -7,6 +7,14 @@
     <li class="nav-item">
       <a class="nav-link" href="{{ url_for('tasks.table_view') }}">Explore Data</a>
     </li>
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPages" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Insights</a>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPages">
+          <a class="dropdown-item" href="{{ url_for('tasks.show_plot')}}">Cell type proportion</a>
+          <a class="dropdown-item" href="{{ url_for('tasks.show_plot')}}">Cell type specific gene expression</a>
+          <a class="dropdown-item" href="{{ url_for('tasks.show_plot')}}">Cell type specific pathway expression</a>
+        </div>
+    </li>
     <li class="nav-item">
       <a class="nav-link" href="{{ url_for('tasks.contribute') }}">Contribute</a>
     </li>
@@ -37,6 +45,14 @@
     </li>
     <li class="nav-item">
       <a class="nav-link" href="{{ url_for('tasks.table_view') }}">Explore Data</a>
+    </li>
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPages" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Insights</a>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPages">
+          <a class="dropdown-item" href="{{ url_for('tasks.show_plot')}}">Cell type proportion</a>
+          <a class="dropdown-item" href="{{ url_for('tasks.show_plot')}}">Cell type specific gene expression</a>
+          <a class="dropdown-item" href="{{ url_for('tasks.show_plot')}}">Cell type specific pathway expression</a>
+        </div>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="{{ url_for('frontend.contact_us') }}">Contact Us</a>
